assets/css/styles.css
/* global */
html, body {
  margin: 0;
  padding: 0;
  font-family: 'Source Sans Pro', sans-serif;
  background-color: black;
  color: white;
}

a, a:visited {
  color: #f1f;
  text-decoration: none;
}

a:hover, a.active {
  color: #666;
  text-decoration: underline;
  transition: all 0.5s ease;
  transition-property: color, fill;
}

img {
  width: 100%;
}

.hidden {
  display: none;
}
.invisible {
  visibility: hidden;
}

.stickyNav {
  position: -webkit-sticky;
  position: sticky;
  background-color: black;
  padding-left: 2em;
}

.post, .page {
  margin: 2.5em;
}

/* header.html */

header {
  position: relative;
  top: -36px;
  height: 100vh;
  /* background: url('../images/cropped-walter-wlodarczyk-2017-05-12-_87a1913.jpg');
  background-size: cover; */
}

#headerLineDrawing {
  z-index: 2;
}

#headerLineDrawing, #subHeading {
  position: relative;
  top: 33vh;
  color: #f1f;
}

#carousel {
  position: absolute;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

#carousel #content {
  display: inline-flex;
}

#carousel .imgWrapper {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  text-align: center; /* well, mostly flex does this */
  background-size: contain!important;
}

#subHeading {
  max-width: 100vw;
  text-align: center;
  font-size: 2em;
  font-style: italic;
}

#subHeading div:first-child {
  margin-bottom: 20vh;
}

.fadeToBlackBg {
  animation-name: fadeToBlackBg;
  animation-duration: 3s;
  background-color: black;
}
@keyframes fadeToBlackBg {
  0% {
    background-color: white;
    filter: saturate(0%) brightness(0%);
  }
  100% {
    background-color: black;
    filter: saturate(100%) brightness(100%);
  }
}


.fadeInBorder {
  animation-name: fadeInBorder;
  animation-duration: 3s;
}
@keyframes fadeInBorder {
  0% {
    border-top-color: transparent;
  }
  100% {
    border-top-color: black;
  }
}

.blackHotpink {
  animation-name: blackHotpinkColors;
  animation-duration: 2s;
  animation-iteration-count: infinite;
}
@keyframes blackHotpinkColors {
  0% {
    border-top-color: black;
    /* margin-top: 1em; */
  }
  25% {
    /* margin-top: 1.2em; */
  }
  50% {
    border-top-color: #f1f;
    /* margin-top: 1em; */
  }
  75% {
    /* margin-top: 1.2em; */
  }
  100% {
    border-top-color: black;
    /* margin-top: 1em; */
  }
}

.fadeToHotpinkColor {
  animation-name: fadeToHotpinkColor;
  animation-duration: 10s;
  color: #f1f;
}
@keyframes fadeToHotpinkColor {
  0% {
    color: rgba(0,0,0,0);
  }
  100% {
    color: #f1f;
  }
}

.fadeToHotpinkNeon {
  animation-name: fadeToHotpinkNeon;
  animation-duration: 3s;
  color: #f1f;
  text-shadow:
    /* 0 0 5px #f1f, */
    /* 0 0 10px #f1f, */
    /* 0 0 20px #f1f, */
    0 0 40px #f1f,
    0 0 80px #f1f,
    0 0 90px #f1f,
    0 0 100px #f1f,
    0 0 150px #f1f;
}
@keyframes fadeToHotpinkNeon {
  0% {
    color: rgba(0,0,0,0);
    text-shadow:
      /* 0 0 5px black, */
      /* 0 0 10px black, */
      /* 0 0 20px black, */
      0 0 40px rgba(0,0,0,0),
      0 0 80px rgba(0,0,0,0),
      0 0 90px rgba(0,0,0,0),
      0 0 100px rgba(0,0,0,0),
      0 0 150px rgba(0,0,0,0);
  }
  100% {
    color: #f1f;
    text-shadow:
      /* 0 0 5px #f1f, */
      /* 0 0 10px #f1f, */
      /* 0 0 20px #f1f, */
      0 0 40px #f1f,
      0 0 80px #f1f,
      0 0 90px #f1f,
      0 0 100px #f1f,
      0 0 150px #f1f;
  }
}

.fadeToTrans {
  animation-name: fadeToTrans;
  animation-duration: 3s;
  color: rgba(0,0,0,0) !important;
  text-shadow:
    0 0 40px rgba(0,0,0,0),
    0 0 80px rgba(0,0,0,0),
    0 0 90px rgba(0,0,0,0),
    0 0 100px rgba(0,0,0,0),
    0 0 150px rgba(0,0,0,0);
}
@keyframes fadeToTrans {
  0% {
    color: #f1f;
    text-shadow:
      0 0 40px  #f1f,
      0 0 80px  #f1f,
      0 0 90px #f1f,
      0 0 100px #f1f,
      0 0 150px #f1f;
  }
  100% {
    color: rgba(0,0,0,0);
    text-shadow:
      0 0 40px rgba(0,0,0,0),
      0 0 80px rgba(0,0,0,0),
      0 0 90px rgba(0,0,0,0),
      0 0 100px rgba(0,0,0,0),
      0 0 150px rgba(0,0,0,0);
  }
}
/* nav.html */

nav {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: middle;
  font-weight: 700;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: black;
  z-index: 3;
}

nav a {
  margin: 0.5em 1em;
}

nav a.landing {
  margin: 0.5em 0;
}

nav a:hover {
  fill: #f1f;
  text-decoration: none;
}

#navLineDrawing {
  width: 44px;
  display: inline-block;
}

/* main content */

main {
  margin: 1em;
  min-height: 100vh;
  padding-bottom: 25vh;
}

.post-meta {
  float: right;
  margin-right: 2em;
  font-size: 0.8em;
  color: #666;
}

footer {
  text-align: right;
  margin-right: 1vw;
  margin-bottom: 2px;
  font-size: 10px;
}
footer a {
  text-decoration: none;
}

/* mobile stuffz */
@media (max-width: 600px) {
  #subHeading {
    font-size: 1em;
  }
  nav {
    position: static;
    flex-direction: column;
    margin-left: 0.5em;
  }
  nav.homeNav{
    position: absolute;
  }
  #lbOutline {
    width: 100%;
  }
  nav a {
    margin: 0 5px;
  }
  .stickyNav {
    position: static;
  }
  .post, .page {
    margin: 0.5em;
  }
}

